--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   </head>
   <body>
     <a
-      href="nosotros.html"
+      href="views/pages/nosotros.html"
       style="
         position: absolute;
         top: 20px;
