Funcionan los dos

--- a/index.html
+++ b/index.html
@@ -108,6 +108,24 @@
               Iniciar Test <i class="fas fa-play"></i>
             </div>
           </a>
+
+          <a href="views/pages/comparativa.html" class="card tdm-card">
+            <div class="card-icon comparison-icon">
+              <i class="fas fa-balance-scale"></i>
+            </div>
+            <h3>Comparativa</h3>
+            <p class="description">
+              Comparación directa entre TDM Síncrono y Asíncrono. Analiza ventajas y desventajas.
+            </p>
+            <ul class="features">
+              <li><i class="fas fa-check"></i> Diferencias clave</li>
+              <li><i class="fas fa-check"></i> Cuadro comparativo</li>
+              <li><i class="fas fa-check"></i> Escenarios de uso</li>
+            </ul>
+            <div class="btn-action secondary">
+              Ver Comparativa <i class="fas fa-arrow-right"></i>
+            </div>
+          </a>
         </div>
       </main>
 
