--- a/index.html
+++ b/index.html
@@ -90,6 +90,24 @@
               Iniciar Simulación <i class="fas fa-arrow-right"></i>
             </div>
           </a>
+
+          <a href="views/pages/comparativa.html" class="card tdm-card">
+            <div class="card-icon compare-icon">
+              <i class="fas fa-balance-scale"></i>
+            </div>
+            <h3>Comparativa TDM</h3>
+            <p class="description">
+              Analiza y compara el comportamiento de ambas técnicas en un entorno unificado.
+            </p>
+            <ul class="features">
+              <li><i class="fas fa-check"></i> Visualización simultánea</li>
+              <li><i class="fas fa-check"></i> Control de variables</li>
+              <li><i class="fas fa-check"></i> Análisis en tiempo real</li>
+            </ul>
+            <div class="btn-action secondary">
+              Ir a Comparativa <i class="fas fa-chart-line"></i>
+            </div>
+          </a>
           <a href="views/pages/quiz.html" class="card tdm-card card-quiz">
             <div class="card-icon quiz-icon">
               <i class="fas fa-brain"></i>
